--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,136 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700&family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
-body {
-  width: 614px;
-  background-color: #e5e5e5;
-  font-family: "Roboto", sans-serif;
-}
-
-.telaEntrada {
-  background-color: #ffffff;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.telaEntrada img {
-  width: 120px;
-}
-
-.telaEntrada .logo {
-  margin-top: 72px;
-}
-
-.digitar input {
-  width: 261px;
-  height: 54px;
-  margin-top: 258px;
-  border-radius: 4px;
-  border: 1px solid #d7d7d7;
-  text-align: center;
-  color: #696969;
-}
-
-.digitar-msg input {
-  font-style: italic;
-  border: none;
-  font-size: 18px;
-}
-.entrar {
-  width: 109px;
-  height: 45px;
-  border-radius: 9px;
-  background-color: #e7e7e7;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 10px;
-  margin-bottom: 60%;
-}
-.topo,
-.digitar-msg {
-  width: 614px;
-  height: 80px;
-  background-color: #ffffff;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-.digitar-msg {
-  position: fixed;
-  bottom: 0;
-}
-
-.topo {
-  position: fixed;
-  top: 0;
-}
-
-.logo {
-  width: 75px;
-}
-
-ion-icon {
-  font-size: 40px;
-}
-
-.mensagensRenderizadas {
-  width: 614px;
-  margin-top: 120px;
-  margin-bottom: 120px;
-}
-
-.msg-status {
-  background-color: #dcdcdc;
-  margin-bottom: 5px;
-  height: auto;
-  padding: 20px;
-}
-
-.msg-reservada {
-  background-color: #ffdede;
-  margin-bottom: 5px;
-  height: auto;
-  padding: 20px;
- 
-}
-
-.msg-normal {
-  background-color: #ffffff;
-  margin-bottom: 5px;
-  height: auto;
-  padding: 20px;
-}
-
-.escondido {
-  display: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
+.root {
   font-family: Roboto, sans-serif;
   font-weight: 400;
 }
 .head {
   color: #e38d4e;
   background-color: #c3cfd9;
-  width: 100%;
   height: 10vh;
   font-size: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
+ 
 }
 
 .selection {
@@ -138,7 +24,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 5%;
-  font-size: 3vh;
+  font-size: 4vh;
   color: #293845;
 }
 
@@ -147,10 +33,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .moviesSelection img {
-  width: 29vw;
+  width: 20vw;
   height: 20vh;
 }
 
@@ -158,7 +46,7 @@ body {
   background: #ffffff;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
-  width: 32vw;
+  width: 22vw;
   height: 22vh;
   display: flex;
   justify-content: center;
@@ -168,12 +56,12 @@ body {
 
 .dates {
   display: flex;
-  flex-direction: column;
-
-  width: 60%;
+  width: 80%;
+  margin-left: 10px; 
 }
 .date {
-  font-size: 2.4vh;
+   width: 80%;
+  font-size: 3vh;
   color: #293845;
   margin-bottom: 3%;
 }
@@ -194,7 +82,7 @@ body {
   width: 15vw;
   height: 5vh;
   font-size: 100%;
-  font-weight: 300;
+ 
   margin: 10px;
 }
 
@@ -249,9 +137,15 @@ body {
 }
 
 .clientData {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
   margin-bottom: 7%;
+  margin-left: 5%;
+  margin-top: 5%;
+
 }
-.clientData,
+
 .clientData span {
   display: flex;
   flex-direction: column;
@@ -288,12 +182,14 @@ body {
 .summary {
   margin-bottom: 7%;
   padding: 8%;
+color: #293845;
+line-height: 20px;
 }
 .summary p {
   color: #247a6b;
   font-weight: 700;
   padding: 5%;
-  font-size: 3vh;
+  font-size: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -301,38 +197,14 @@ body {
 
 .summary h1 {
   font-weight: 700;
-  font-size: 2.6vh;
+  font-size: 4vh;
 }
 
 .summary h2 {
-  font-size: 2.4vh;
+  font-size: 3vh;
   font-weight: 400;
 }
 
-.movieDescription {
-  width: 100%;
-  height: 15vh;
-  background-color: #dfe6ed;
-  display: flex;
-  align-items: center;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  font-size: 22px;
-}
-
-.movieDescription img {
-  background-color: red;
-  width: 9vw;
-  height: 8vh;
-}
-
-.movieDescription .movie {
-  width: 11vw;
-  height: 10vh;
-}
-
-.description {
-  display: flex;
-  flex-direction: column;
+.summary div {
+  margin-top: 20px;
 }
