--- a/src/components/style.css
+++ b/src/components/style.css
@@ -208,3 +208,31 @@ line-height: 20px;
 .summary div {
   margin-top: 20px;
 }
+
+.movieDescription {
+  width: 100%;
+  height: 15vh;
+  background-color: #dfe6ed;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: 22px;
+}
+
+.movieDescription img {
+  background-color: red;
+  width: 9vw;
+  height: 8vh;
+}
+
+.movieDescription .movie {
+  width: 11vw;
+  height: 10vh;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+}
